--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                   <th class='table-header'>Speed</th>
                   <th class='table-header'>Ready</th>
                   <th class='table-header'>Due</th>
-                  <th class='table-header'> Remove</th>
+                  <th class='table-header'>Remove</th>
                 </tr>
               </thead>
             </table>
@@ -333,9 +333,9 @@
               </div>
               <div class="col-xs-4">
                 <div class="input-group">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default btn-number" data-type="minus" data-field="length"><span class="glyphicon glyphicon-minus"></span></button></span>
-                  <input type="text" name="length" class="form-control input-number" min="1" max="99999">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default btn-number" data-type="plus" data-field="length"><span class="glyphicon glyphicon-plus"></span></button></span>
+                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="minus" data-field="default_length"><span class="glyphicon glyphicon-minus"></span></button></span>
+                  <input type="text" name="default_length" class="form-control input-number" min="1" max="99999">
+                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="plus" data-field="default_length"><span class="glyphicon glyphicon-plus"></span></button></span>
                 </div>
               </div>
             </div>
@@ -348,9 +348,9 @@
               </div>
               <div class="col-xs-4">
                 <div class="input-group">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default btn-number" data-type="minus" data-field="speed"><span class="glyphicon glyphicon-minus"></span></button></span>
-                  <input type="text" name="speed" class="form-control input-number" min="1" max="999">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default btn-number" data-type="plus" data-field="speed"><span class="glyphicon glyphicon-plus"></span></button></span>
+                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="minus" data-field="default_speed"><span class="glyphicon glyphicon-minus"></span></button></span>
+                  <input type="text" name="default_speed" class="form-control input-number" min="1" max="999">
+                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="plus" data-field="default_speed"><span class="glyphicon glyphicon-plus"></span></button></span>
                 </div>
               </div>
             </div>
@@ -363,9 +363,9 @@
               </div>
               <div class="col-xs-4">
                 <div class="input-group">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default btn-number" data-type="minus" data-field="ready"><span class="glyphicon glyphicon-minus"></span></button></span>
-                  <input type="text" name="ready" class="form-control input-number" min="0" max="99">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default btn-number" data-type="plus" data-field="ready"><span class="glyphicon glyphicon-plus"></span></button></span>
+                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="minus" data-field="default_ready"><span class="glyphicon glyphicon-minus"></span></button></span>
+                  <input type="text" name="default_ready" class="form-control input-number" min="0" max="99">
+                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="plus" data-field="default_ready"><span class="glyphicon glyphicon-plus"></span></button></span>
                 </div>
               </div>
             </div>
@@ -378,9 +378,9 @@
               </div>
               <div class="col-xs-4">
                 <div class="input-group">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default btn-number" data-type="minus" data-field="due"><span class="glyphicon glyphicon-minus"></span></button></span>
-                  <input type="text" name="due" class="form-control input-number" min="1" max="99">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default btn-number" data-type="plus" data-field="due"><span class="glyphicon glyphicon-plus"></span></button></span>
+                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="minus" data-field="default_due"><span class="glyphicon glyphicon-minus"></span></button></span>
+                  <input type="text" name="default_due" class="form-control input-number" min="1" max="99">
+                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="plus" data-field="default_due"><span class="glyphicon glyphicon-plus"></span></button></span>
                 </div>
               </div>
             </div>
@@ -393,9 +393,9 @@
               </div>
               <div class="col-xs-4">
                 <div class="input-group">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default btn-number" data-type="minus" data-field="headway"><span class="glyphicon glyphicon-minus"></span></button></span>
-                  <input type="text" name="headway" class="form-control input-number" min="1" max="99">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default btn-number" data-type="plus" data-field="headway"><span class="glyphicon glyphicon-plus"></span></button></span>
+                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="minus" data-field="default_headway"><span class="glyphicon glyphicon-minus"></span></button></span>
+                  <input type="text" name="default_headway" class="form-control input-number" min="1" max="99">
+                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="plus" data-field="default_headway"><span class="glyphicon glyphicon-plus"></span></button></span>
                 </div>
               </div>
             </div>
@@ -408,9 +408,9 @@
               </div>
               <div class="col-xs-4">
                 <div class="input-group">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default btn-number" data-type="minus" data-field="time"><span class="glyphicon glyphicon-minus"></span></button></span>
-                  <input type="text" name="time" class="form-control input-number" min="1" max="99">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default btn-number" data-type="plus" data-field="time"><span class="glyphicon glyphicon-plus"></span></button></span>
+                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="minus" data-field="default_time"><span class="glyphicon glyphicon-minus"></span></button></span>
+                  <input type="text" name="default_time" class="form-control input-number" min="1" max="99">
+                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="plus" data-field="default_time"><span class="glyphicon glyphicon-plus"></span></button></span>
                 </div>
               </div>
             </div>
@@ -423,9 +423,9 @@
               </div>
               <div class="col-xs-4">
                 <div class="input-group">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default btn-number" data-type="minus" data-field="algorithm"><span class="glyphicon glyphicon-minus"></span></button></span>
-                  <input type="text" name="algorithm" class="form-control input-number" min="1" max="99">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default btn-number" data-type="plus" data-field="algorithm"><span class="glyphicon glyphicon-plus"></span></button></span>
+                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="minus" data-field="default_algorithm"><span class="glyphicon glyphicon-minus"></span></button></span>
+                  <input type="text" name="default_algorithm" class="form-control input-number" min="1" max="99">
+                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="plus" data-field="default_algorithm"><span class="glyphicon glyphicon-plus"></span></button></span>
                 </div>
               </div>
             </div>
