Added algorithm selectionbox to settings menu

--- a/index.html
+++ b/index.html
@@ -437,21 +437,21 @@
                 </div>
               </div>
             </div>
-            <div class="settings-row">
-              <div class="col-xs-6 settings-label">
-                <label>Time</label>
-              </div>
-              <div class="col-xs-2 settings-label settings-align">
-                <label></label>
-              </div>
-              <div class="col-xs-4">
-                <div class="input-group">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="minus" data-field="default_time"><span class="glyphicon glyphicon-minus"></span></button></span>
-                  <input type="text" name="default_time" class="form-control input-number" min="1" max="99">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="plus" data-field="default_time"><span class="glyphicon glyphicon-plus"></span></button></span>
-                </div>
-              </div>
-            </div>
+            <!--<div class="settings-row">-->
+              <!--<div class="col-xs-6 settings-label">-->
+                <!--<label>Time</label>-->
+              <!--</div>-->
+              <!--<div class="col-xs-2 settings-label settings-align">-->
+                <!--<label></label>-->
+              <!--</div>-->
+              <!--<div class="col-xs-4">-->
+                <!--<div class="input-group">-->
+                  <!--<span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="minus" data-field="default_time"><span class="glyphicon glyphicon-minus"></span></button></span>-->
+                  <!--<input type="text" name="default_time" class="form-control input-number" min="1" max="99">-->
+                  <!--<span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="plus" data-field="default_time"><span class="glyphicon glyphicon-plus"></span></button></span>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</div>-->
             <div class="settings-row">
               <div class="col-xs-6 settings-label">
                 <label>Algorithm</label>
@@ -461,9 +461,9 @@
               </div>
               <div class="col-xs-4">
                 <div class="input-group">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="minus" data-field="default_algorithm"><span class="glyphicon glyphicon-minus"></span></button></span>
-                  <input type="text" name="default_algorithm" class="form-control input-number" min="1" max="99">
-                  <span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="plus" data-field="default_algorithm"><span class="glyphicon glyphicon-plus"></span></button></span>
+                  <select class="selectpicker "></select>
+                  <!--<input type="text" name="default_algorithm" class="form-control input-number" min="1" max="99">-->
+                  <!--<span class="input-group-btn"><button type="button" class="btn btn-default modify" data-type="plus" data-field="default_algorithm"><span class="glyphicon glyphicon-plus"></span></button></span>-->
                 </div>
               </div>
             </div>
