--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="sidebar-table">
           <table class="table table-hover" id="convoy-list">
             <thead class = "hidden">
-              <tr class="stat-row">
+              <tr class="sidebar-table-heading">
                 <th class='table-header'>ID</th>
                 <th class='table-header'>Start</th>
                 <th class='table-header'>Destination</th>
