Made 'nr of alternative paths' option meet method selection in settings menu

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 </div>
               </div>
             </div>
-            <div class="settings-row">
+            <div class="settings-row alter-paths">
               <div class="col-xs-6 settings-label">
                 <label>Number of alternative paths</label>
               </div>
