Added path distance to the results

--- a/index.html
+++ b/index.html
@@ -109,16 +109,14 @@
           <table id="stat-list">
             <thead >
             <tr id = "stat-heading">
-              <!--<th class = col-xs-2></th>-->
-              <th class = col-xs-1></th>
-              <th class = col-xs-1></th>
-              <th class = col-xs-2>ID</th>
-              <th class = col-xs-2>Start time</th>
-              <th class = col-xs-2>Finish time</th>
-              <th class = col-xs-2 >Travel time</th>
-              <th class = col-xs-2>Pass time</th>
-              <th class = col-xs-2>
-              </th>
+              <th class = stat-cell-1></th>
+              <th class = stat-cell-1></th>
+              <th class = stat-cell-1>ID</th>
+              <th class = stat-cell-2>Distance</th>
+              <th class = stat-cell-2>Start time</th>
+              <th class = stat-cell-2>Finish time</th>
+              <th class = stat-cell-2>Travel time</th>
+              <th class = stat-cell-2>Pass time</th>
             </tr>
             </thead>
           </table>
