Removed unused code and refactored the rest

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 <link rel="stylesheet" href="node_modules/jquery-ui-dist/jquery-ui.min.css">
 <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="node_modules/bootstrap-timepicker/css/bootstrap-timepicker.min.css">
-<!--<link rel="stylesheet" href="node_modules/eonasdan-bootstrap-datetimepicker/src/sass/bootstrap-datetimepicker-build.scss">-->
 <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css">
 <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="node_modules/drmonty-leaflet-awesome-markers/css/leaflet.awesome-markers.css">
-<!--<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>-->
 <script>window.$ = window.jQuery = require('jquery');</script>
 <script type="text/javascript" src="node_modules/jquery-ui-dist/jquery-ui.min.js"></script>
 <script type="text/javascript" src="node_modules/leaflet/dist/leaflet.js"></script>
@@ -27,12 +25,12 @@
 <script type="text/javascript" src="renderer.js"></script>
 
 
-<script src="src/Util.js"></script>
-<script src="src/MoveableMarker.js"></script>
-<script src="src/TickPoint.js"></script>
-<script src="src/Tick.js"></script>
-<script src="src/Clock.js"></script>
-<script src="src/Playback.js"></script>
+<script src="playback/Util.js"></script>
+<script src="playback/MoveableMarker.js"></script>
+<script src="playback/TickPoint.js"></script>
+<script src="playback/Tick.js"></script>
+<script src="playback/Clock.js"></script>
+<script src="playback/Playback.js"></script>
 
 
 
